<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Tutorial</string>
    <string name="total_display">Your total is </string>
    <string name="add_bt_text">Add one</string>
    <string name="sub_bt_text">Subtract one</string>
    <string name="edit_text_hint">Type a Command</string>
    <string name="tv_results_text">invalid</string>
    <string name="b_results_text">Button</string>
    <string name="tb_pass_text">Try Command</string>
    <string name="flipper_4">Flipper 3</string>
    <string name="flipper_3">Flipper 3</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="load_your_data">Load your data</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="button">Button</string>
    <string name="current_weather">Current Weather</string>
    <string name="default_notification_channel_id">420</string>
    <string name="channel_name">Chris!</string>
    <string name="channel_description">Named after me</string>
    <string name="text_to_voice">Text to Voice</string>
    <!-- This is an ad unit ID for a test ad. Replace with your own banner ad unit id. -->
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <!-- This is my ad unit ID. -->
    <string name="banner_ad_unit_id">ca-app-pub-8995816283899055/8696551007</string>
    <string name="message_text">Hello</string>
    <string name="button_text">Click me Hoss</string>
    <string name="tv_bucky_text">Do some Gestures!</string>
    <string name="button_text_2">Dank Meme Bro</string>
    <string name="log_in">Do it!</string>
    <string name="signin_title">Sign In</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="bottom">Bottom</string>
    <string name="bottom_text">Bottom</string>
    <string name="top_text">Top</string>
    <string name="title_activity_webpage_detail_host">WebpageDetailHostActivity</string>
    <string name="title_webpage_list">Webpages</string>
    <string name="title_webpage_detail">Webpage Detail</string>
    <string name="red_string">Red</string>
    <string name="green_string">Green</string>
    <string name="yellow_string">Yellow</string>
    <string name="tranny_button_text">Button</string>
    <string name="btn_text">Large Text</string>
    <string name="apples">Apples</string>
    <string name="go_to_bacon">Go to Bacon</string>
    <string name="bacon_text">Bacon</string>
    <string name="bacon_button_text">Go to Apples</string>
    <string name="broadcast_button_text">Send Broadcast</string>
    <string name="touch_me_baby">Touch Me Baby!</string>
    <string name="nice_work">Nice Job Hoss!</string>
    <string name="hello">Hello</string>
    <string name="what_s_the_time">What\'s the time?</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="enter_a_food_product">Enter a food product</string>
    <string name="start_activity">StartActivity</string>
    <string name="start_activity_for_result">StartActivityForResult</string>
    <string name="textview">TextView</string>
    <string name="text_to_speech">Text to Speech</string>
    <string name="timer_completed">Good job Hoss!</string>
    <string name="funny_message">Holy carp, that was a long one!</string>
    <string name="success">Success</string>
    <string name="take_photo">Take Photo</string>
    <string name="click_for_notification">Click for Notification</string>

</resources>