<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <group android:checkableBehavior="single">

        <!-- the mi prefix is an abbreviation for menu item -->
        <item
            android:id="@+id/menu_red"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/red_string"/>
        <item
            android:id="@+id/menu_green"
            android:orderInCategory="2"
            app:showAsAction="never"
            android:title="@string/green_string"/>
        <item
            android:id="@+id/menu_yellow"
            android:orderInCategory="3"
            app:showAsAction="never"
            android:title="@string/yellow_string"/>
    </group>

</menu>