<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical" >

<EditText
    android:id="@+id/etSharedPrefs"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10" >

    <requestFocus />
</EditText>

<Button
    android:id="@+id/bSave"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/save" />

<Button
    android:id="@+id/bLoad"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/load" />

<TextView
    android:id="@+id/tvLoadSharedPreferences"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/load_your_data" />

</LinearLayout>