<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SQLiteSample">

    <EditText
        android:id="@+id/buckys_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="651dp"
        android:hint="@string/enter_a_food_product"
        android:inputType="textAutoComplete"
        android:ems="10"
        />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="258dp"
        android:layout_marginBottom="578dp"
        android:onClick="addButtonClicked"
        android:text="@string/add"
        />

    <Button
        android:id="@+id/del_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="576dp"
        android:onClick="deleteButtonClicked"
        android:text="@string/delete"
        />

    <TextView
        android:id="@+id/buckys_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="374dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

</RelativeLayout>